--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,11 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     compile files('libs/glide-3.5.2.jar')
+    compile files('libs/apache-mime4j-0.6.jar')
+    compile files('libs/httpmime-4.0.1.jar')
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+    compile files('libs/picasso-2.5.2.jar')
 }
