--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.expresso.activity" >
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera"></uses-feature>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!--for fetching location-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
         <activity
@@ -18,9 +23,41 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"
+            android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
-        <activity android:name=".SignIn"></activity>
-        <activity android:name=".SignUp"></activity>
+        <activity android:name=".SignIn"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".SignUp"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".FeedPageLocation"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".FeedCreationPage"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="portrait"></activity>
+
+        <activity android:name=".EndStory"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="portrait"></activity>
+
+        <activity android:name=".StoryBoard"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="portrait"></activity>
+
+
+        <activity android:name=".BirdView"
+            android:exported="true"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
+            android:screenOrientation="portrait"></activity>
+
+
+        <activity android:name=".FullScreenViewActivity"
+            android:exported="true"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
+            ></activity>
+
     </application>
 
 </manifest>
