--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 21
@@ -22,8 +23,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'de.hdodenhof:circleimageview:1.2.2'
     compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     compile files('libs/glide-3.5.2.jar')
@@ -32,4 +33,8 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
     compile files('libs/picasso-2.5.2.jar')
+    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile files('libs/socialauth-4.4.jar')
+    compile files('libs/socialauth-android-3.2.jar')
+    compile 'com.google.android.gms:play-services-gcm:7.5.0'
 }
